Fix spacing

--- a/app/assets/stylesheets/hexes.scss
+++ b/app/assets/stylesheets/hexes.scss
@@ -26,6 +26,7 @@
   display: flex;
 flex-direction: column;
 margin: 20px;
+margin-bottom: 0px;
 border: 1px solid lightgray;
 border-radius: 7px;
 }
